chore(fix): add light mode code block

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="themes/prism-one-light.css" rel="stylesheet" />
 
 	<!--Prevent Flash of white screen before dark mode is applied-->
 	<script lang="ts">
@@ -18,6 +19,7 @@
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
+	<script src="prism.js"></script>
 </body>
 
 </html>
